[gd_scene load_steps=7 format=2]

[ext_resource path="res://tileset.tres" type="TileSet" id=1]
[ext_resource path="res://Map2.gd" type="Script" id=2]
[ext_resource path="res://L4P2.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/SFX/winP2.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/players/player1/Player1.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 123.102, 120.603 )

[node name="Map2" type="TileMap"]
scale = Vector2( 0.25, 0.25 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 0, 9, 0, 1, 9, 0, 2, 9, 0, 3, 9, 0, 4, 9, 0, 5, 9, 0, 6, 9, 0, 7, 9, 0, 8, 9, 0, 9, 9, 0, 10, 9, 0, 11, 9, 0, 12, 9, 0, 13, 9, 0, 14, 9, 0, 15, 9, 0, 16, 9, 0, 17, 9, 0, 18, 9, 0, 19, 9, 0, 20, 9, 0, 21, 9, 0, 22, 9, 0, 23, 9, 0, 24, 9, 0, 25, 9, 0, 26, 9, 0, 27, 9, 0, 28, 9, 0, 29, 9, 0, 65536, 9, 0, 65542, 9, 0, 65545, 9, 0, 65546, 9, 0, 65547, 9, 0, 65548, 9, 0, 65549, 9, 0, 65550, 9, 0, 65551, 9, 0, 65552, 9, 0, 65553, 9, 0, 65554, 9, 0, 65557, 9, 0, 65560, 9, 0, 65561, 9, 0, 65562, 9, 0, 65563, 9, 0, 65564, 9, 0, 65565, 9, 0, 131072, 9, 0, 131078, 9, 0, 131081, 9, 0, 131082, 9, 0, 131083, 9, 0, 131084, 9, 0, 131093, 9, 0, 131096, 9, 0, 131097, 9, 0, 131098, 9, 0, 131099, 9, 0, 131100, 9, 0, 131101, 9, 0, 196608, 9, 0, 196611, 9, 0, 196614, 9, 0, 196629, 9, 0, 196632, 9, 0, 196635, 6, 0, 196636, 6, 0, 196637, 9, 0, 262144, 9, 0, 262145, 9, 0, 262146, 9, 0, 262147, 9, 0, 262150, 9, 0, 262159, 9, 0, 262162, 9, 0, 262163, 9, 0, 262164, 9, 0, 262165, 9, 0, 262168, 9, 0, 262171, 6, 0, 262172, 6, 0, 262173, 9, 0, 327680, 9, 0, 327681, 7, 0, 327682, 7, 0, 327686, 9, 0, 327689, 9, 0, 327690, 9, 0, 327691, 9, 0, 327692, 9, 0, 327695, 9, 0, 327704, 9, 0, 327707, 9, 0, 327708, 9, 0, 327709, 9, 0, 393216, 9, 0, 393217, 7, 0, 393218, 7, 0, 393222, 9, 0, 393228, 9, 0, 393231, 9, 0, 393240, 9, 0, 393243, 9, 0, 393244, 9, 0, 393245, 9, 0, 458752, 9, 0, 458753, 9, 0, 458754, 9, 0, 458755, 9, 0, 458758, 9, 0, 458764, 9, 0, 458765, 9, 0, 458766, 9, 0, 458767, 9, 0, 458770, 9, 0, 458771, 9, 0, 458772, 9, 0, 458773, 9, 0, 458774, 9, 0, 458775, 9, 0, 458776, 9, 0, 458781, 9, 0, 524288, 9, 0, 524291, 9, 0, 524294, 9, 0, 524295, 9, 0, 524296, 9, 0, 524297, 9, 0, 524298, 9, 0, 524299, 9, 0, 524300, 9, 0, 524312, 9, 0, 524317, 9, 0, 589824, 9, 0, 589827, 9, 0, 589848, 9, 0, 589849, 9, 0, 589850, 9, 0, 589853, 9, 0, 655360, 9, 0, 655363, 9, 0, 655380, 9, 0, 655384, 9, 0, 655385, 9, 0, 655386, 9, 0, 655389, 9, 0, 720896, 9, 0, 720899, 9, 0, 720900, 9, 0, 720901, 9, 0, 720902, 9, 0, 720905, 9, 0, 720906, 9, 0, 720907, 9, 0, 720910, 8, 0, 720911, 8, 0, 720912, 8, 0, 720913, 8, 0, 720916, 9, 0, 720925, 9, 0, 786432, 9, 0, 786435, 9, 0, 786436, 9, 0, 786437, 9, 0, 786438, 9, 0, 786441, 9, 0, 786442, 9, 0, 786443, 9, 0, 786446, 8, 0, 786447, 8, 0, 786448, 8, 0, 786449, 8, 0, 786452, 9, 0, 786461, 9, 0, 851968, 9, 0, 851971, 9, 0, 851972, 9, 0, 851973, 9, 0, 851974, 9, 0, 851977, 9, 0, 851978, 9, 0, 851979, 9, 0, 851982, 8, 0, 851983, 8, 0, 851984, 8, 0, 851985, 8, 0, 851988, 9, 0, 851991, 9, 0, 851992, 9, 0, 851993, 9, 0, 851994, 9, 0, 851995, 9, 0, 851996, 9, 0, 851997, 9, 0, 917504, 9, 0, 917513, 9, 0, 917514, 9, 0, 917515, 9, 0, 917524, 9, 0, 917533, 9, 0, 983040, 9, 0, 983049, 9, 0, 983050, 9, 0, 983051, 9, 0, 983060, 9, 0, 983069, 9, 0, 1048576, 9, 0, 1048577, 9, 0, 1048578, 9, 0, 1048579, 9, 0, 1048580, 9, 0, 1048581, 9, 0, 1048582, 9, 0, 1048583, 9, 0, 1048584, 9, 0, 1048585, 9, 0, 1048586, 9, 0, 1048587, 9, 0, 1048588, 9, 0, 1048589, 9, 0, 1048590, 9, 0, 1048591, 9, 0, 1048592, 9, 0, 1048593, 9, 0, 1048594, 9, 0, 1048595, 9, 0, 1048596, 9, 0, 1048597, 9, 0, 1048598, 9, 0, 1048599, 9, 0, 1048600, 9, 0, 1048601, 9, 0, 1048602, 9, 0, 1048603, 9, 0, 1048604, 9, 0, 1048605, 9, 0 )
script = ExtResource( 2 )

[node name="Goal" type="Area2D" parent="."]

[node name="GoalCol" type="CollisionShape2D" parent="Goal"]
position = Vector2( 255.961, 766.643 )
shape = SubResource( 1 )

[node name="P2" parent="." instance=ExtResource( 3 )]
position = Vector2( 3584.86, 511.763 )

[node name="Camera2D" type="Camera2D" parent="P2"]
current = true
zoom = Vector2( 0.25, 0.25 )

[node name="Start" type="Position2D" parent="."]
position = Vector2( 3582.34, 511.763 )

[node name="win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.6
one_shot = true

[node name="Ghost1" type="Sprite" parent="."]
modulate = Color( 0.298039, 0.447059, 0.113725, 1 )
position = Vector2( 615.161, 723.719 )
texture = ExtResource( 5 )

[node name="Ghost2" type="Sprite" parent="."]
modulate = Color( 0.694118, 0.760784, 0.298039, 1 )
position = Vector2( 3504.87, 1049.39 )
texture = ExtResource( 5 )

[node name="Ghost3" type="Sprite" parent="."]
modulate = Color( 0.513726, 0.117647, 0.568627, 1 )
position = Vector2( 1824.81, 1209.64 )
texture = ExtResource( 5 )

[node name="Ghost4" type="Sprite" parent="."]
modulate = Color( 0.317647, 0.662745, 0.32549, 1 )
position = Vector2( 868.462, 1907.52 )
texture = ExtResource( 5 )

[node name="Ghost5" type="Sprite" parent="."]
modulate = Color( 0.658824, 0.870588, 0.282353, 1 )
position = Vector2( 1773.11, 527.281 )
texture = ExtResource( 5 )
[connection signal="area_entered" from="Goal" to="." method="_on_Goal_area_entered"]
[connection signal="hit" from="P2" to="." method="_on_P2_hit"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
